basic mvp functionalities from four apis

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 REACT_APP_QUICKBOOKS_CLIENT_ID=ABlkUncabhHaanZuIfG4E8GUVBb7Cs3FuYEq1PGnBksdNTmkiC
 REACT_APP_QUICKBOOKS_CLIENT_SECRET=vFwA2Nh8BcNyd5NRpLP8VpaHEzNeq5ReaNRMc7Xx
+REACT_APP_ZOHO_CLIENT_ID=1000.UEU999E7XU9YQM7EU3WVERGY9JC6WP
+REACT_APP_ZOHO_CLIENT_SECRET=478c44b0b3e29c5ef70501ca67a4a394879793c50d
+REACT_APP_HUBSPOT_TOKEN=pat-na1-513a6342-385c-4a59-bbcc-def9f46a2873
+REACT_APP_XERO_CLIENT_ID=7C7587FC7CA84FF5A6C19F78164B69AD
+REACT_APP_XERO_CLIENT_SECRET=ym2XHJFk1dGEC37J3Ir_22UCQwEhhlL9iAccQafv0ju_TTcc
